--- a/app.json
+++ b/app.json
@@ -16,7 +16,10 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+        "package": "com.app.cpcnotify",
+      "googleServicesFile": "./google-services.json"
+      
     },
     "web": {
       "bundler": "metro",
@@ -33,10 +36,17 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+       "expo-notifications"
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "00075aad-f53e-4c52-8538-f9215c88665b"
+      }
     }
   }
 }
